--- a/curris/test/resource/output.html
+++ b/curris/test/resource/output.html
@@ -68,6 +68,7 @@ built_html = build_html(parsed_result, output_file_path)
 <pre><code class="language-python">def test(param):
     print(param)
 </code></pre>
+<p><a href="http://prismjs.com" title="">Prism</a> is used to highlight codes in HTML.</p>
 <h3>3. List</h3>
 <h4>Unordered List:</h4>
 <p>Nested list is supported. Use tab or 4 spaces to indicate indentations.</p>
@@ -126,7 +127,7 @@ built_html = build_html(parsed_result, output_file_path)
 <td align="right">item6</td></tr></tbody></table><h3>6. Link</h3>
 <pre><code class="language-markdown">[shown content](www.google.com "optional title")
 </code></pre>
-<p><a href="www.google.com" title="optional title">shown content</a></p>
+<p><a href="https://www.google.com" title="optional title">shown content</a></p>
 <h3>7. Image</h3>
 <pre><code class="language-markdown">![Image](https://scontent-nrt1-1.cdninstagram.com/t51.2885-15/s640x64…1080.1080/23823593_1751381835163782_208122965429059584_n.jpg)
 </code></pre>
