--- a/curris/test/resource/output.html
+++ b/curris/test/resource/output.html
@@ -1,4 +1,8 @@
-<html><head><link rel="stylesheet"             href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/themes/prism.min.css" />
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/themes/prism.min.css"/>
+
 <style>body {
   padding: 20px;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -41,8 +45,11 @@ blockquote {
   border-left: 6px solid #ccc;
   background: #f9f9f9;
 }
-</style></head>
-<body><h1>Minimal Markdown Parser in Python3</h1>
+
+</style>
+</head>
+<body>
+<h1>Minimal Markdown Parser in Python3</h1>
 <p>This is the first minimal project in 2018, which provides minimal parsing and rendering functions of Markdown. Specifically, it supports most common Markdown syntax, and could parse source file into Python <code>dict</code>, as well as render to html.</p>
 <p>Some extended functions of Markdown are not supported yet, but are under implementation.</p>
 <h2>Usage</h2>
@@ -141,4 +148,9 @@ built_html = build_html(parsed_result, output_file_path)
 <p><em>italic</em></p>
 <h3>9. quoteblock</h3>
 <blockquote>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.<blockquote>This is a nested quotes block.</blockquote></blockquote>
-<script src="            https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/prism.min.js"></script>            <script src="            https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/components/prism-python.min.js"></script>            <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/components/prism-markdown.min.js"></script></body></html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/prism.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/components/prism-python.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/components/prism-markdown.min.js"></script>
+
+</body>
+</html>
