--- a/curris/test/resource/html_encode.html
+++ b/curris/test/resource/html_encode.html
@@ -18,7 +18,7 @@
 <li>&#x2F;test</li>
 <pre><code class="language-javascript">alert('test')
 </code></pre>
-<p><a href="www.google.com" title="">&quot;test&quot;</a></p>
+<p><a href="http://www.google.com/test?hello" title="">&quot;test&quot;</a></p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/prism.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.9.0/components/prism-javascript.min.js"></script>
